--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "^7.46.1",
+		"react-responsive-carousel": "^3.2.23",
 		"sanity": "^3.16.4",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss": "3.3.3",
