Added functionality to create and store a product with images on Sanity.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	},
 	"dependencies": {
 		"@sanity/client": "^6.4.11",
+		"@sanity/image-url": "^1.0.2",
 		"@sanity/vision": "3.10.3",
 		"@types/node": "20.5.0",
 		"@types/react": "18.2.20",
