--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 		"react-hook-form": "^7.46.1",
 		"react-responsive-carousel": "^3.2.23",
 		"sanity": "^3.16.4",
+		"sanity-plugin-media": "^2.2.2",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss": "3.3.3",
 		"typescript": "5.1.6",
