--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"react-responsive-carousel": "^3.2.23",
 		"sanity": "^3.16.4",
 		"sanity-plugin-media": "^2.2.2",
+		"sweetalert2": "^11.7.28",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss": "3.3.3",
 		"typescript": "5.1.6",
